tests/data/libsvm/invalid/feature_with_alpha_char_at_the_beginning.libsvm
1 1:a-1.11 2:-2.90
0 1:-0.52 2:-0.33